# synapse

./: Cargo.toml  README.md
.github/workflows/: build.yaml
benches/: fib30.rs
benches/cases/: fib30.syn  fib40.syn
hooks/: pre-commit
src/: compiler.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  util.rs  vm.rs
tests/: integration_test.rs
tests/cases/: add.syn  add_error.syn  break.syn  break_complex.syn  compiler_error_fn_not_defined.syn  compiler_error_invalid_assignment.syn  compiler_error_no_main.syn  compiler_error_struct_not_defined.syn  compiler_error_wrong_initializer_count.syn  compiler_error_wrong_params.syn  continue.syn  div.syn  dummy.syn  eq.syn  fib10.syn  fib20.syn  fizzbuzz.syn  for.syn  grouping.syn  import.syn  linked_list.syn  logical.syn  loop.syn  method.syn  minus_number.syn  mul.syn  neg.syn  neg_error.syn  not.syn  not_error.syn  parser_error_expected_identifier_after_struct_keyword.syn  parser_error_expected_identifier_when_instantiating_struct.syn  parser_error_wrong_struct_decl.syn  ptr.syn  ptr02.syn  ptr03.syn  relational.syn  relational_error.syn  strcat.syn  strcat_error.syn  (+8 more)
tests/cases/cached/: a.syn  b.syn  c.syn
tests/cases/cycle/: a.syn  b.syn
tests/cases/tree/: a.syn  b.syn  f.syn
