[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
logos = "0.13.0"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "fib30"
harness = false

[profile.release]
lto = "fat"
panic = "abort"
