[package]
name = "synapse"
authors = ["xqb64 <x@nuked.one>"]
description = "A lean-and-mean virtual stack machine with a reduced instruction set"
readme = "README.md"
repository = "https://github.com/xqb64/synapse"
license = "MIT"
keywords = ["virtual machine"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bumpalo = "3.16.0"
logos = "0.13.0"
num_enum = "0.7.2"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
rstest = "0.18.2"

[[bench]]
name = "fib30"
harness = false

[profile.release]
lto = "fat"
panic = "abort"
debug = true
